<resources>
    <string name="app_name">crdDatabase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Order">Order</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="menuName">Menu</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="edit">Edit</string>
    <string name="tvHeadline">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>