<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DailogFragment"
    android:orientation="vertical"
    android:layout_margin="10dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvHeadline"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        />

    <EditText
        android:id="@+id/evAddName"

        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/evAddPrice"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <Button
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel"
        android:background="@drawable/btnshape"
        android:layout_marginBottom="20dp"
        />
        <Button
            android:layout_width="100dp"
            android:layout_height="55dp"
            android:background="@drawable/btnshape"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            android:layout_marginBottom="20dp"
            />


    </LinearLayout>









</LinearLayout>